[package]
name = "actix-web-middleware-cognito"
description = "Middleware for actix-web that helps you validate Cognito tokens"
version = "0.4.0-beta.19"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/robertohuertasm/actix-web-middleware-cognito"
readme = "README.md"
keywords = ["middleware", "cognito", "actix-web", "actix"]
categories = ["web-programming", "web-programming::http-server"]

exclude = [".github", ".vscode", "Makefile.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.19", default-features = false } 
actix-web-httpauth = "0.6.0-beta.7"
actix-service = "2.0.0"
futures = "0.3"
log = "0.4"
# jwt validation
jsonwebtokens = "1.0.0"
jsonwebtokens-cognito = "0.1.0-alpha.9"

[dev-dependencies]
env_logger = "0.9"
actix-cors = "0.6.0-beta.8"
# actix-cors = "0.6.0-beta.1"
actix-rt = "2.2.0"
dotenv = "0.15.0"
